Fixed overflow with margin on mobile honeycomb & PR

--- a/src/styles.css
+++ b/src/styles.css
@@ -1287,6 +1287,7 @@ td{
 	}
 	#honeycomb{
 		width: 100vw;
+		margin: 0px;
 	}
 	.card-deck{
 		flex: none;
